# h5pack

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
checksum/: index.html
docs/: checksum.md  docs.md  index.html  index.md  info.md  install.md  license.md  pack.md  quickstart.md  unpack.md  virtual.md
examples/00_annotated-audio-dataset/: data.csv  dataset.csv  h5pack.yaml
examples/00_annotated-audio-dataset/audio/: brownian-noise.flac
examples/00_annotated-audio-dataset/data/: pink-noise.flac  white-noise.flac
examples/01_other-datatypes-dataset/: dataset.csv  h5pack.yaml
info/: index.html
install/: index.html
license/: index.html
pack/: index.html
quickstart/: index.html
search/: search_index.json
src/h5pack/: __init__.py
src/h5pack/cli/: checksum.py  create.py  experimental.py  info.py  main.py  pack.py  unpack.py  utils.py  virtual.py
src/h5pack/cli/builders/: audio.py  audio_to_metric.py  builder.py
src/h5pack/cli/create/: audio_builder.py
src/h5pack/core/: config.py  display.py  exceptions.py  guards.py  io.py  utils.py
src/h5pack/data/: __init__.py  extractors.py  parsers.py  validators.py
unpack/: index.html
virtual/: index.html
