[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "h5pack"
authors = [{name = "Esteban Gómez", email = "esteban.gomezmellado@aalto.fi"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
dependencies = [
    "h5py >= 3.14.0",
    "numpy >= 2.0.2",
    "soundfile >= 0.13.1",
    "polars >= 1.33.1",
    "pyyaml >= 6.0.3",
    "rich >= 14.2.0",
    "tqdm>=4.67.1",
    "packaging>=25.0",
]
requires-python = ">=3.9"

[project.urls]
Home = "https://www.github.com/eagomez2/h5pack"

[project.scripts]
"h5pack" = "h5pack.cli.main:main"

[project.optional-dependencies]
lint = [
    "ruff>=0.9.7"
]
docs = [
    "mkdocs>=1.6.1"
]

[tool.ruff]
lint.extend-select = [
    "C4",
    "SIM",
    "TCH"
]
line-length = 79
